# akshare-proxy-patch

./: README.md  pyproject.toml  setup.py
akshare_proxy_patch/: __init__.py  yfinance.py
examples/aktools/: akt.py
examples/all_quote_history/: main.py
examples/basic/: test_akshare.py  test_efinance.py  test_yfinance.py
examples/基础示例/: test_akshare.py  test_efinance.py
examples/并发获取股票行情/: main.py  stock_lists.csv  worker.py
